--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "typescript": "^4.5.5"
   },
   "dependencies": {
-    "express": "^4.17.2"
+    "@types/mongoose": "^5.11.97",
+    "express": "^4.17.2",
+    "mongoose": "^6.5.0"
   }
 }
